client/src/components/pages/CustomerView/tabs/MenuView.css
.menu-box {
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    background-color: white;
    width: 50%;
    margin-top: 1%;
    padding: 5px;
    outline: black solid 3px;
}

.grid-display {
    display: grid;
    grid-template-columns: repeat(3, calc(300px + 5%));
    padding: 15px;
    grid-column-gap: 20px;
    grid-row-gap: 50px;
}

.item-display {
    background: white;
    width: 350px;
    text-align: center;
    outline: black solid 2px;
    padding-bottom: 2px;
}


.menu-container{
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    padding-bottom: 100px;
}

.category-button{
    height: 50px;
    width: 100px;
    margin: 1px;
}

.item-name{
    font-weight: bold;
}

